# cardgames

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
cardgames/: __init__.py  games.py  plotting.py  utils.py
examples/: simulate_simple_game.py
pokerbot/: utils.py
tests/: test_games.py  test_utils.py
